# OptimizeSpec

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TECHNICAL.md  build.js  manual-test-findings.md  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
examples/python-managed-agent/: README.md  pyproject.toml  requirements-managed-agents-preview.txt
examples/python-managed-agent/optimizespec/changes/manual-self-improvement-system/: design.md  eval-cases.yaml  improved-candidate.yaml  manual_self_improve.py  proposal.md  seed-candidate.yaml  tasks.md
examples/python-managed-agent/optimizespec/changes/manual-self-improvement-system/specs/: manual-self-improvement.md
examples/python-managed-agent/optimizespec/changes/optimizespec-managed-agent-eval-generator/: agent_eval_generator.py  design.md  eval-cases.yaml  proposal.md  seed-candidate.yaml
examples/python-managed-agent/optimizespec/changes/optimizespec-package-optimizer/: design.md  package_optimizer.py  proposal.md  tasks.md
examples/python-managed-agent/optimizespec/fixtures/agents/aggregate-only-scoring/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-asi-records/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-eval-contract/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-judge-records/: agent.yaml  request.md
examples/python-managed-agent/optimizespec/fixtures/agents/missing-optimizer-acceptance/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-optimizer-lineage/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-promotion-evidence/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-scoring-guidance/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/missing-task-distribution/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/optimizespec-managed-agent/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/optimizespec-package-guidance/: agent.yaml  request.md
examples/python-managed-agent/optimizespec/fixtures/agents/partial-intent-examples/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/uncalibrated-llm-grader/: agent.yaml
examples/python-managed-agent/optimizespec/fixtures/agents/vague-success-criteria/: agent.yaml
examples/python-managed-agent/src/optimizespec/: candidate.py  eval_validation.py  evaluator.py  runtime.py
optimizespec/: README.md
scripts/: setup-python-managed-agent-example.sh  test-python-managed-agent-example.sh
skills/optimizespec-apply/references/runtimes/claude-managed-agent/python-managed-agent-package/: README.md  pyproject.toml
skills/optimizespec-apply/references/runtimes/claude-managed-agent/python-managed-agent-package/src/optimizespec/: evaluator.py
test/: cli.test.ts  package.test.ts
tests/: test_candidate.py  test_eval_validation.py  test_evaluator.py  test_gepa_improvement_live.py  test_manual_self_improvement_system.py  (+2 more)
(+259 files in other folders)
