[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-gepa"
version = "0.1.0"
description = "Minimal GEPA + Claude Managed Agents prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.92.0",
  "cloudpickle>=3.1.1",
  "gepa",
  "litellm>=1.76.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
claude-gepa = "claude_gepa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
