[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-gepa"
version = "0.1.0"
description = "Create a self-improvement system for agents with GEPA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.91.0",
  "cloudpickle>=3.1.1",
  "gepa",
  "litellm>=1.76.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
agent-gepa = "agent_gepa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
