[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizespec-py-claude-managed-agent-reference"
version = "0.1.0"
description = "Python reference package for OptimizeSpec Managed Agents and GEPA flows."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.91.0",
  "cloudpickle>=3.1.1",
  "gepa",
  "litellm>=1.76.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
